fix: responsive button group wrap in mdx (#1154)

--- a/packages/ui/app/src/css/utilities.scss
+++ b/packages/ui/app/src/css/utilities.scss
@@ -122,4 +122,8 @@
     .bg-search-dialog {
         background-color: var(--bg-color-search-dialog, var(--bg-translucent));
     }
+
+    .m-mdx {
+        @apply mt-4 mb-6 first:mt-0;
+    }
 }
